--- a/templates/main.html
+++ b/templates/main.html
@@ -2,11 +2,13 @@
 <head>
     <title>Module Name</title>
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/mdbcss1.css">
 </head>
 
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -15,20 +17,40 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/">Module Name</a>
+          <a class="navbar-brand" href="/">Movies DB</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="#">Now Showing</a></li>
+              <li><a href="#about">Upcoming</a></li>
+              <li><a href="#contact">Popular</a></li>
             </ul>
+            <form id="form-search" class="navbar-form navbar-left pull-right" role="search">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search">
+                <span class="input-group-btn dang">
+                  <button class="btn btn-primary" type="button">&nbsp;<i class="fa fa-search"></i></button>
+                </span>
+              </div>
+              
+            </form>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
     <div class="container" style='top: 70px; position: relative;'>
-        <div class='row'>
+        <div id="main-container" class='row'>
+          <div id="dNS"></div>
+          <div id="dSR">
+            <h1>Results</h1>
+            <ul id="dSRP" class="pagination pagination-sm">
+            </ul>
+            <ul id="dispResults">
+              
+            </ul>
+            <ul id="dSRP" class="pagination pagination-sm">
+            </ul>
+          </div>
         </div><!-- /.row -->
     </div><!-- /.container -->
 
