--- a/templates/main.html
+++ b/templates/main.html
@@ -98,5 +98,27 @@
     </div><!-- /.container -->
     <script src="/static/js/vendors/bootstrap.min.js"></script>
     <script src="/static/js/app.js"></script>
+    <script src="/static/js/vendors/handlebars.js"></script>
+
+    <script type="text/x-handlebars-template" class = "backdrop">
+        {%raw%}
+        <li class="col-md-4" style="background:rgba(96,96,96,0.2);margin:10px;padding:10px 5px;">
+            <center>
+                   <a role="movie-viewer" href="/view/{{resid}} "> 
+                    <img style="max-width:100%;max-height:400px;max-width:500px;height:280px;display:block" class="clearfix" src="{{bdimg}}">
+                    </a>
+            </center> 
+            <center>
+                    <img style="max-width:60%;max-height:400px;max-width:290px;height:340px;position:absolute;" class="clearfix" src="{{image}}">
+            </center> 
+              <center><div style><a role="movie-viewer" href="/view/{{resid}} ">  {{title1}} </a></div>
+                    <div><i class="fa fa-thumbs-o-up"></i>  {{resvote}}  votes 
+                    <i class="fa fa-bar-chart-o"></i>  {{respop}} %  
+                    <i class="fa fa-calendar-o"></i>  {{resreldate}} </div>
+                     </center></li>
+        {%endraw%}
+
+
+        </script>
 </body>
 </html>
