--- a/templates/view.html
+++ b/templates/view.html
@@ -59,6 +59,8 @@
         <div class="mv"></div>
         <div class="md clearfix">
           <div class="ms"></div>
+          <div><h5>Tagline</h5></div>
+          <div class="ma"></div>
           <div><h5>Cast</h5></div>
           <div class="mc clearfix "></div>
         </div>
@@ -82,6 +84,7 @@
     </div><!-- /.container -->
     <script src="/static/js/vendors/bootstrap.min.js"></script>
     <script src="/static/js/app.js"></script>
+    <script src="/static/js/vendors/handlebars.js"></script>
 </body>
 </html>
 {% endautoescape %}
